--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="bg-gray-900 text-white">
         <div class="container mx-auto flex justify-between items-center py-4 px-6">
             <div class="flex items-center">
-                <img src="/path-to-logo.png" alt="Feral Forge Solutions Logo" class="h-12">
+                <img src="/feral.png" alt="Feral Forge Solutions Logo" class="h-12">
                 <h1 class="text-xl font-bold ml-4">Feral Forge Solutions</h1>
             </div>
             <nav>
