Update index.html with colors and logo

--- a/index.html
+++ b/index.html
@@ -3,16 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Feral Forge Solutions</title>
+    <title>Feral Forge Solutions LLC</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <style>
+        @import "tailwindcss";
+@theme {
+  --color-feralgreen: #98D86F;
+  --color-feraldark: #1C2534;
+  --color-bermuda: #78dcca;
+}
+    </style>
 </head>
 <body class="bg-gray-100 text-gray-800">
     <!-- Header Section -->
-    <header class="bg-gray-900 text-white">
+    <header class="bg-feraldark text-white">
         <div class="container mx-auto flex justify-between items-center py-4 px-6">
             <div class="flex items-center">
-                <img src="/feral.png" alt="Feral Forge Solutions Logo" class="h-12">
-                <h1 class="text-xl font-bold ml-4">Feral Forge Solutions</h1>
+                <img src="/feral_color.svg" alt="Feral Forge Solutions LLC Logo" class="h-12">
+                <h1 class="text-xl font-bold ml-4">Feral Forge Solutions LLC</h1>
             </div>
             <nav>
                 <ul class="flex space-x-6">
@@ -29,7 +37,7 @@
         <div class="container mx-auto text-center">
             <h2 class="text-4xl font-bold mb-4">Empowering Non-Profits with Technical Expertise</h2>
             <p class="text-lg mb-6">Providing tailored solutions to help non-profit organizations thrive in a digital world.</p>
-            <a href="#contact" class="bg-green-500 text-white px-6 py-3 rounded-lg shadow hover:bg-green-400">Get Started</a>
+            <a href="#contact" class="bg-feralgreen text-white px-6 py-3 rounded-lg shadow hover:bg-green-400">Get Started</a>
         </div>
     </section>
 
@@ -75,7 +83,7 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="bg-gray-900 text-white py-20">
+    <section id="contact" class="bg-feraldark text-white py-20">
         <div class="container mx-auto text-center">
             <h2 class="text-3xl font-bold mb-8">Contact Us</h2>
             <p class="mb-6">Let us help your non-profit achieve its mission. Reach out to discuss how we can assist you.</p>
@@ -97,7 +105,7 @@
     <!-- Footer -->
     <footer class="bg-gray-800 text-gray-400 py-6">
         <div class="container mx-auto text-center">
-            <p>&copy; 2025 Feral Forge Solutions. All rights reserved.</p>
+            <p>&copy; 2025 Feral Forge Solutions LLC. All rights reserved.</p>
         </div>
     </footer>
 </body>
