Update index.html custom colors

--- a/index.html
+++ b/index.html
@@ -5,16 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feral Forge Solutions LLC</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <style>
-        @import "tailwindcss";
-@theme {
-  --color-feralgreen: #98D86F;
-  --color-feraldark: #1C2534;
-  --color-bermuda: #78dcca;
-}
-    </style>
 </head>
-<body class="bg-gray-100 text-gray-800">
+<body class="bg-[#1C2534] text-gray-800">
     <!-- Header Section -->
     <header class="bg-feraldark text-white">
         <div class="container mx-auto flex justify-between items-center py-4 px-6">
@@ -37,7 +29,7 @@
         <div class="container mx-auto text-center">
             <h2 class="text-4xl font-bold mb-4">Empowering Non-Profits with Technical Expertise</h2>
             <p class="text-lg mb-6">Providing tailored solutions to help non-profit organizations thrive in a digital world.</p>
-            <a href="#contact" class="bg-feralgreen text-white px-6 py-3 rounded-lg shadow hover:bg-green-400">Get Started</a>
+            <a href="#contact" class="bg-[#98D86F] text-white px-6 py-3 rounded-lg shadow hover:bg-green-400">Get Started</a>
         </div>
     </section>
 
@@ -97,7 +89,7 @@
                 <div class="mb-4">
                     <textarea name="message" rows="4" placeholder="Your Message" class="w-full px-4 py-2 rounded-lg"></textarea>
                 </div>
-                <button type="submit" class="bg-green-500 text-white px-6 py-3 rounded-lg shadow hover:bg-green-400">Send Message</button>
+                <button type="submit" class="bg-[#98D86F] text-white px-6 py-3 rounded-lg shadow hover:bg-green-400">Send Message</button>
             </form>
         </div>
     </section>
